public/styles/custom.css
body {
  background: #f8f8f8;
  height: 100%;
}

a:hover {
  text-decoration: none;
}

.jumbotron {
  color: white;
  border-radius: 0px;
}

.elf-starry-sky {
  background-image: url(../images/earth_banner.jpg);
  background-position: 50% 45%;
  background-size: auto;
  background-repeat: no-repeat;
}

.elf-starry-sky-top {
  background-image: url(../images/earth_banner.jpg);
  background-position: top;
  background-size: auto;
  background-repeat: no-repeat;
}

.elf-navbar {
  background-color: #e9e9e9;
  margin: -20px 5% 40px;
  border-radius: 10px;
}

.elf-navbar-bottom {
  border-radius: 10px;
}
.elf-navbar-bottom .nav-item {
  font-weight: bold;
}

.elf-footer {
  /* background: linear-gradient(175deg, #272b30, #272b30 40%, white 150%); */
  background: linear-gradient(180deg, #f8f8f8, #c8c8c8);
}

.elf-footer .row div {
	margin-top: 30px;
}

/* major-block receive grey/inherit background alternatedly. */
.major-block {
  padding-top: 16vh;
  padding-bottom: 16vh;
}

.slideanim {
  visibility: hidden;
}

.slideframes {
    animation-name: slideframes;
    -webkit-animation-name: slideframes;

    animation-duration: 1s;
    -webkit-animation-duration: 1s;

    visibility: visible;
}

@keyframes slideframes {
    0% {
        opacity: 0;
        transform: translateY(70%);
    }
    100% {
        opacity: 1;
        transform: translateY(0%);
    }
}

@-webkit-keyframes slideframes {
    0% {
        opacity: 0;
        -webkit-transform: translateY(70%);
    }
    100% {
        opacity: 1;
        -webkit-transform: translateY(0%);
    }
}

